# BCI-EEG-Research

./: .gitignore  Basic EEG Trained Model-Copy1.ipynb  README.md  pyproject.toml  requirements.txt
humpback-whale-identification/: Humpback Whale Identification.ipynb
humpback-whale-identification/.ipynb_checkpoints/: Humpback Whale Identification-checkpoint.ipynb
kaggle-eeg/: Basic EEG Trained Model-V2.ipynb  EEG Fastai.ipynb  EEG Keras  EEG-Keras.ipynb
kaggle-eeg/.ipynb_checkpoints/: Basic EEG Trained Model-V2-checkpoint.ipynb
notebooks/: EEG-Keras.ipynb  kaggle-eeg-deep-learning.ipynb  kaggle-eeg-keras.ipynb  kaggle-eeg-scratch.ipynb  kaggle-eeg-tree-ensembles.ipynb
santander-customer-transaction-prediction/: Santander Customer Transaction Prediction.ipynb  test.csv
