[project]
name = "bci_eeg_research_RALPH_DUGUE"
version = "0.0.1"
authors = [{ name = "Ralph Dugue", email = "rdugue1@gmail.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/KingPhito/BCI-EEG-Research"
Issues = "https://github.com/KingPhito/BCI-EEG-Research/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
